fixed modal styling on mobile, as well as getting rid of border bottom for mp3 tracks on mobile thank GOD that SUCKED

--- a/colin-mccaffrey-music/src/App.css
+++ b/colin-mccaffrey-music/src/App.css
@@ -10,6 +10,7 @@ body {
   padding: 0;
   margin: 0;
   overflow: none;
+  overflow-x: hidden;
 }
 
 .home {
