--- a/colin-mccaffrey-music/src/components/SubNavs/Performer Subnav/styles/Calendar.css
+++ b/colin-mccaffrey-music/src/components/SubNavs/Performer Subnav/styles/Calendar.css
@@ -2,7 +2,7 @@
 #modalShowTitle {
   display: flex;
   flex-direction: column;
-  margin-bottom: 0%;
+  margin: 0;
 }
 
 #titleDivider {
@@ -35,6 +35,7 @@ td {
   border-bottom: 1px solid #ddd;
   padding: 10px;
   text-align: center;
+  overflow: hidden;
 }
 
 tr {
@@ -98,7 +99,8 @@ button {
   padding: 20px;
   position: relative;
 }
-/* Table details  */
+
+/* Table details */
 .showDetails {
   display: flex;
   flex-direction: column;
@@ -112,12 +114,12 @@ button {
 
 #headliner {
   font-style: italic;
-  margin: 2% auto 2% auto;
+  margin: 2% auto;
 }
 
 #showName {
   font-weight: bold;
-  margin: 3% auto 2% auto;
+  margin: 3% auto;
 }
 
 .modal-buttons {
@@ -153,70 +155,6 @@ button {
 @media (max-width: 801px) {
   .table-container {
     max-width: 768px;
-  }
-
-  table {
-    display: flex;
-    margin: auto;
-    padding: auto;
-    text-align: center;
-  }
-
-  #venueDetails {
-    display: flex;
-    font-size: medium;
-    justify-content: center;
-    text-align: center;
-  }
-
-  th,
-  td {
-    width: auto;
-    font-size: 12px;
-  }
-
-  td:last-child,
-  th:last-child {
-    align-items: center;
-  }
-
-  #showName,
-  #headliner {
-    font-size: 16px;
-    width: auto;
-  }
-
-  #venue {
-    display: flex;
-    flex-direction: column;
-    font-size: 20px;
-    align-items: center;
-  }
-
-  #venueDetails {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    width: auto;
-  }
-
-  .table-container {
-    display: flex;
-    justify-content: center;
-  }
-
-  #modalShowTitle {
-    font-size: 15px;
-  }
-
-  #modal-content {
-    max-height: 100dvh;
-    overflow-inline: 0;
-  }
-}
-
-@media (max-width: 801px) {
-  .table-container {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -244,35 +182,41 @@ button {
     justify-content: center;
   }
 
-  td:last-child {
-    display: flex;
-    width: 10dvh;
-    justify-content: center;
-  }
-
   th {
-    display: none;
+    display: none; /* Hide table headers on mobile */
   }
 
   td {
-    display: flex;
-    width: 100dvh;
-    padding: 8px 10px;
+    display: block;
+    width: 99dvw;
+    max-width: 80%;
+    padding: 10px;
     margin-bottom: 10px;
     margin: auto;
     border-bottom: 1px solid #ddd;
+    word-wrap: break-word !important;
+    white-space: normal;
+
   }
 
-  .showName,
-  .showVenue,
-  .showPrice,
-  .showDate {
-    font-size: 14px;
-    margin-bottom: 5px;
+  #venueDetails {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    font-size: medium;
+    text-align: center;
+  }
+
+  #showName,
+  #headliner {
+    font-size: 16px;
+    width: auto;
   }
 
   .showName {
     font-weight: 600;
+    max-width: 80dvw;
   }
 
   .showPrice {
@@ -280,7 +224,7 @@ button {
     font-weight: bold;
   }
 
-  .showDate {
+ .showDate {
     font-size: 18px;
     font-weight: bold;
   }
@@ -293,22 +237,13 @@ button {
     margin-top: 10px;
     font-size: 14px;
   }
-}
 
-@media (max-width: 801px) {
   .nav {
     width: 100dvw;
   }
 
-  #venueDetails {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: auto;
-  }
-
   .showDetails {
-    max-height: 30%;
+    height: 80% !important;
   }
 
   tr {
@@ -319,5 +254,10 @@ button {
   .home {
     width: auto;
     margin: auto;
+  }
+  
+  .modal-buttons {
+    display: flex;
+    flex-direction: column;
   }
 }
