--- a/colin-mccaffrey-music/src/utils/AudioPlayer/AudioPlayerMobile.css
+++ b/colin-mccaffrey-music/src/utils/AudioPlayer/AudioPlayerMobile.css
@@ -54,6 +54,7 @@
   thead,
   td {
     width: 80%;
+    border-bottom: 0;
   }
 
   tr {
